// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should render properly 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  padding: 1.6rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  position: relative;
  border-style: solid;
  box-sizing: border-box;
  font-family: inherit;
  border-color: #b0bcc8;
  border-width: 0 0 0.1rem 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:first-child {
  border-top-left-radius: 0.8rem;
}

.c0:last-child {
  border-top-right-radius: 0.8rem;
}

.c0::after {
  content: '';
  position: absolute;
  display: block;
  height: 0.4rem;
  bottom: -0.1rem;
  left: 0;
  width: 100%;
  background-color: transparent;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
  background-color: #ffffff;
}

.c0:disabled::after {
  background-color: transparent;
}

.c0:disabled .c4 {
  color: #b0bcc8;
}

.c0:disabled .sc-AxhUy {
  color: #b0bcc8;
}

.c0:disabled .sc-AxiKw {
  background-color: #b0bcc8;
}

.c0:disabled .sc-AxjAm {
  font-size: 2.4rem;
  padding: 0;
  background-color: #F7F8F9;
}

.c0:disabled .sc-AxjAm * {
  fill: #b0bcc8;
}

.c0:not(:disabled):hover {
  cursor: pointer;
}

.c0 .sc-AxjAm {
  margin-right: 1.6rem;
}

.c0 .c4 {
  color: #607890;
}

.c0 .sc-AxhUy {
  color: #607890;
}

.c0 .sc-AxiKw {
  background-color: #607890;
}

.c0 .sc-AxjAm {
  font-size: 2.4rem;
  padding: 0;
  background-color: #eff2f4;
}

.c0 .sc-AxjAm * {
  fill: #607890;
}

.c0:not(:disabled):hover {
  background-color: #F7F8F9;
  background-color: #F7F8F9;
}

.c0:not(:disabled):hover .c4 {
  color: #435465;
}

.c0:not(:disabled):hover .sc-AxhUy {
  color: #435465;
}

.c0:not(:disabled):hover .sc-AxiKw {
  background-color: #435465;
}

.c0:not(:disabled):hover .sc-AxjAm {
  font-size: 2.4rem;
  padding: 0;
  background-color: #dfe4e9;
}

.c0:not(:disabled):hover .sc-AxjAm * {
  fill: #435465;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    aria-controls="panel-tab1"
    aria-selected="false"
    class="c0"
    id="tab1"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3 c4 "
        >
          Add
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`Tab should render properly with icon 1`] = `
.c2 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #e6effd;
}

.c2 * {
  fill-opacity: 1;
  fill: #607890;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c0 {
  padding: 1.6rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  position: relative;
  border-style: solid;
  box-sizing: border-box;
  font-family: inherit;
  border-color: #b0bcc8;
  border-width: 0 0 0.1rem 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
}

.c0 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c0:first-child {
  border-top-left-radius: 0.8rem;
}

.c0:last-child {
  border-top-right-radius: 0.8rem;
}

.c0::after {
  content: '';
  position: absolute;
  display: block;
  height: 0.4rem;
  bottom: -0.1rem;
  left: 0;
  width: 100%;
  background-color: transparent;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: not-allowed;
  background-color: #ffffff;
}

.c0:disabled::after {
  background-color: transparent;
}

.c0:disabled .c6 {
  color: #b0bcc8;
}

.c0:disabled .sc-AxhUy {
  color: #b0bcc8;
}

.c0:disabled .sc-AxiKw {
  background-color: #b0bcc8;
}

.c0:disabled .c1 {
  font-size: 2.4rem;
  padding: 0;
  background-color: #F7F8F9;
}

.c0:disabled .c1 * {
  fill: #b0bcc8;
}

.c0:not(:disabled):hover {
  cursor: pointer;
}

.c0 .c1 {
  margin-right: 1.6rem;
}

.c0 .c6 {
  color: #607890;
}

.c0 .sc-AxhUy {
  color: #607890;
}

.c0 .sc-AxiKw {
  background-color: #607890;
}

.c0 .c1 {
  font-size: 2.4rem;
  padding: 0;
  background-color: #eff2f4;
}

.c0 .c1 * {
  fill: #607890;
}

.c0:not(:disabled):hover {
  background-color: #F7F8F9;
  background-color: #F7F8F9;
}

.c0:not(:disabled):hover .c6 {
  color: #435465;
}

.c0:not(:disabled):hover .sc-AxhUy {
  color: #435465;
}

.c0:not(:disabled):hover .sc-AxiKw {
  background-color: #435465;
}

.c0:not(:disabled):hover .c1 {
  font-size: 2.4rem;
  padding: 0;
  background-color: #dfe4e9;
}

.c0:not(:disabled):hover .c1 * {
  fill: #435465;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    aria-controls="panel-tab1"
    aria-selected="false"
    class="c0"
    id="tab1"
    role="tab"
    tabindex="-1"
    type="button"
  >
    <svg
      class="c1 c2"
      fill="none"
      height="1em"
      variant="solid"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <span
          class="c5 c6 "
        >
          Add
        </span>
      </div>
    </div>
  </button>
</div>
`;
